fixed layout problems on pages

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,18 +1,14 @@
 /* scss variables */
-$color-primary: #eb7d7a;
-$nav-backgroundcolor: #e2e6b4;
-
-html, body{
-    height: 100%;
-}
-
+$color-primary: #B55054;
+$nav-backgroundcolor: #F3EED9;
 .jumbotron {
     margin: 0;
     padding: 30px;
     
-    background-image: linear-gradient(to right, #eb7d7a, #cf7575, #eb2727);
+    background-image: linear-gradient(to right, #B55054, #B55054, #A04B6C);
     color: white;
 }
+
 .jumbotron-h1{
    text-align: center; 
    padding-right: 40%;
@@ -20,7 +16,8 @@ html, body{
 }
 
 .navbar {
-    background-color: $nav-backgroundcolor; 
+    background-color: $nav-backgroundcolor;
+    
 }
 
 .nav-link{
@@ -83,13 +80,18 @@ html, body{
 
 .special-images{
     width: 400px;
-    height: 400px;
+    height: 350px;
 
 }
-
 .about-info{
-    padding: 30px;
+    padding-top: 30px;
 }
+
+.about-info-content{
+
+    padding-top:20px;
+}
+
 
 .contact-info{
     padding-top: 30px;
@@ -112,6 +114,6 @@ html, body{
 
 .site-footer{
     background-color: $nav-backgroundcolor;
-    padding-left: 20px;
+    padding: 10px 20px;
 
 }
